--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -53,8 +53,8 @@ Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox" do |vb|
     vb.memory = "1024"
     vb.name = "dftd"
-    vb.customize ["modifyvm", :id, "--uart1", "0x3F8", "4"]
-    vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
+    #vb.customize ["modifyvm", :id, "--uart1", "0x3F8", "4"]
+    #vb.customize ["modifyvm", :id, "--uartmode1", "file", File::NULL]
   end
 
   #
